--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>The Emacs Lisp Playground</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>The Emacs Lisp Playground</h1>
-    <form>
-      <label for="code">Enter the code:</label>
-      <textarea id="code"></textarea>
-      <button>Run</button>
-    </form>
-    <p id="output"></p>
+    <div class="container">
+      <h1>The Emacs Lisp Playground</h1>
+      <form>
+        <label for="code">Enter the code:</label>
+        <textarea id="code"></textarea>
+        <button>Run</button>
+      </form>
+      <div id="output"></div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
