--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Run Emacs Lisp code online" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Emacs Lisp Playground</title>
+    <title>Emacs Lisp Playground</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
-      <h1>The Emacs Lisp Playground</h1>
       <form>
-        <label for="code">Enter the code:</label>
+        <label for="code">Enter some Emacs Lisp code:</label>
         <textarea id="code"></textarea>
         <button>Run</button>
       </form>
