Command + RET to run the code

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <form>
         <label for="code">Enter some Emacs Lisp code:</label>
-        <textarea id="code"></textarea>
+        <textarea id="code" name="code"></textarea>
         <button>Run</button>
       </form>
       <div id="output"></div>
