--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
   <body>
     <div class="container">
       <form>
+        <label for="version">Change Emacs version:</label>
+        <select name="version" id="version">
+          <option value="27.1" selected>27.1</option>
+          <option value="26.3">26.3</option>
+          <option value="25.3">25.3</option>
+          <option value="24.5">24.5</option>
+        </select>
+        &nbsp;
         <label for="code">Enter some Emacs Lisp code:</label>
         <textarea id="code" name="code"></textarea>
         <button>Run</button>
